SERVER-67679 Fix concurrent collection drops from returning NamespaceNotFound instead of CollectionUUIDMismatch